# LSPosed-ImGui-Unity

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/java/com/zrt/xposed/: GLES3JNIView.java  Menu.java  StartMenu.java
app/src/main/jni/: CMakeLists.txt  Draw.h  Main.cpp  Render.h
app/src/main/jni/ImGui/: Call_ImGui.h
app/src/main/jni/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/jni/ImGui/images/: Call_Images.h
app/src/main/jni/ImGui/include/: Call_Include.h  GroupPanel.h  Icons_Font.h  Misc.h  Monster_Font.h  Notify.h  Other.h  Tabs.h  Themes.h
app/src/main/jni/Includes/: Call_Includes.h  Logger.h  NativeHook.h  RemapTools.h  Utils.h
app/src/main/jni/Includes/Libraries/curl/arm64-v8a/lib/: libcurl.la
app/src/main/jni/Includes/Libraries/curl/armeabi-v7a/lib/: libcurl.la
app/src/main/jni/Includes/Libraries/curl/x86/lib/: libcurl.la
app/src/main/jni/Includes/Libraries/curl/x86_64/lib/: libcurl.la
app/src/main/jni/Includes/xdl/: xdl_lzma.c  xdl_util.c
app/src/main/jni/TuanMeta/: Call_Me.h
app/src/main/jni/TuanMeta/IL2CppSDKGenerator/: Call_IL2CppSDKGenerator.h  Il2Cpp.cpp  Il2Cpp.h  Il2CppType.h
app/src/main/jni/TuanMeta/Utils/: Call_Utils.h  Define.h  Jni_Stuff.h  PlayAudio.h  Tools.cpp  Tools.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
